# fep3_system

./: CMakeLists.txt  FEP_PRIVATE_COMPAT.cmake  README.md
doc/: CMakeLists.txt  changelog.md
doc/input/: index.rst  system_api.rst
include/fep_system/: event_monitor_intf.h  fep_system.h  fep_system_export.h  fep_system_types.h  fep_system_version.h.in  logging_types_legacy.h  participant_proxy.h  rpc_component_proxy.h  system_logger_intf.h
include/fep_system/rpc_services/clock/: clock_service_rpc_intf.h
include/fep_system/rpc_services/configuration/: configuration_rpc_intf.h
include/fep_system/rpc_services/data_registry/: data_registry_rpc_intf.h
include/fep_system/rpc_services/logging/: logging_rpc_intf.h
include/fep_system/rpc_services/participant_info/: participant_info_rpc_intf.h
include/fep_system/rpc_services/participant_statemachine/: participant_statemachine_rpc_intf.h
scripts/cmake/: enable_multicore_compilation.cmake  use_integrated_debug_symbols.cmake
src/: CMakeLists.txt
src/fep3/plugin/base/: cmake.sources  host_plugin_base.cpp  host_plugin_base.h  shared_library.cpp  shared_library.h
src/fep3/plugin/cpp/: cmake.sources  cpp_host_plugin.cpp  cpp_host_plugin.h  cpp_plugin_component_factory.cpp
src/fep_system/: CMakeLists.txt  fep3_system-config.cmake.in  fep3_system-macros.cmake  fep3_system.plugins.in  fep_system.cpp  participant_proxy.cpp  private_participant_proxy.hpp  service_bus_factory.cpp  service_bus_factory.h  system_logger.h
src/fep_system/mock/: event_monitor.h
src/fep_system/rpc_services/: clock_proxy.hpp  configuration_proxy.hpp  data_registry_proxy.hpp  logging_proxy.hpp  participant_info_proxy.hpp  participant_statemachine_proxy.hpp
test/: CMakeLists.txt  FEP_TEST_PRIVATE.cmake
test/function/: CMakeLists.txt
test/function/system/: CMakeLists.txt
test/function/system/fep_system/: CMakeLists.txt
test/function/system/fep_system/tester_system/files/: timing_example.description
test/function/system/fep_system/tester_system/src/: CMakeLists.txt  fep_test_common.h  participant.cpp  participant_configuration.cpp  participant_configuration_helper.hpp  system.cpp  system_discovery.cpp  system_logging.cpp
test/function/utils/common/: gtest_asserts.h
test/private/install_complete/: reference.yaml
